--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,17 +73,32 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+  fonts:
+    - family: Inter
+      fonts:
+        - asset: assets\font\static\Inter_24pt-Regular.ttf
+        - asset: assets\font\static\Inter_24pt-Black.ttf
+        - weight: 900
+        - asset: assets\font\static\Inter_24pt-ExtraBold.ttf
+        - weight: 800
+        - asset: assets\font\static\Inter_28pt-Bold.ttf
+        - weight: 700
+        - asset: assets\font\static\Inter_28pt-Bold.ttf
+        - weight: 700
+        - asset: assets\font\static\Inter_28pt-SemiBold.ttf
+        - weight: 600
+        - asset: assets\font\static\Inter_24pt-Medium.ttf
+        - weight: 500
+        - asset: assets\font\static\Inter_28pt-Light.ttf
+        - weight: 300
+        - asset: assets\font\static\Inter_28pt-ExtraLight.ttf
+        - weight: 200
+        
+        
+        
+        
+        
+
+  
+  For details regarding fonts from package dependencies,
+  see https://flutter.dev/to/font-from-package
