create onboarding screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  smooth_page_indicator: ^1.2.1
 
 dev_dependencies:
   flutter_test:
@@ -51,16 +52,35 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/images/app.png
+     - assets/images/bag.png
+     - assets/images/bill.png
+     - assets/images/car.png
+     - assets/images/expense.png
+     - assets/images/freelance.png
+     - assets/images/health.png
+     - assets/images/income.png
+     - assets/images/logo.png
+     - assets/images/onboard_1.png
+     - assets/images/onboard_2.png
+     - assets/images/onboard_3.png
+     - assets/images/restaurant.png
+     - assets/images/salary.png
+     - assets/images/user.jpg
+     - assets/app_icon/android.png
+     - assets/app_icon/ic_launcher_background.png
+     - assets/app_icon/ic_launcher_foreground.png
+     - assets/app_icon/ios.png
+     - assets/app_icon/web.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -76,22 +96,22 @@ flutter:
   fonts:
     - family: Inter
       fonts:
-        - asset: assets\font\static\Inter_24pt-Regular.ttf
-        - asset: assets\font\static\Inter_24pt-Black.ttf
+        - asset: assets/font/static/Inter_24pt-Regular.ttf
+        - asset: assets/font/static/Inter_24pt-Black.ttf
         - weight: 900
-        - asset: assets\font\static\Inter_24pt-ExtraBold.ttf
+        - asset: assets/font/static/Inter_24pt-ExtraBold.ttf
         - weight: 800
-        - asset: assets\font\static\Inter_28pt-Bold.ttf
+        - asset: assets/font/static/Inter_28pt-Bold.ttf
         - weight: 700
-        - asset: assets\font\static\Inter_28pt-Bold.ttf
+        - asset: assets/font/static/Inter_28pt-Bold.ttf
         - weight: 700
-        - asset: assets\font\static\Inter_28pt-SemiBold.ttf
+        - asset: assets/font/static/Inter_28pt-SemiBold.ttf
         - weight: 600
-        - asset: assets\font\static\Inter_24pt-Medium.ttf
+        - asset: assets/font/static/Inter_24pt-Medium.ttf
         - weight: 500
-        - asset: assets\font\static\Inter_28pt-Light.ttf
+        - asset: assets/font/static/Inter_28pt-Light.ttf
         - weight: 300
-        - asset: assets\font\static\Inter_28pt-ExtraLight.ttf
+        - asset: assets/font/static/Inter_28pt-ExtraLight.ttf
         - weight: 200
         
         
@@ -100,5 +120,6 @@ flutter:
         
 
   
-  For details regarding fonts from package dependencies,
-  see https://flutter.dev/to/font-from-package
+  #For details regarding fonts from package dependencies,
+  # See https://flutter.dev/go/font-from-package
+
